--- a/Brain013/main.ipynb
+++ b/Brain013/main.ipynb
@@ -22,6 +22,482 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2025-09-12T17:18:07.781532Z",
+     "start_time": "2025-09-12T17:17:48.975430Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data_raw/to_sample/data_train.csv')\n",
+    "len(df)"
+   ],
+   "id": "d52df31b4d1547d4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "800000"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T17:20:56.864433Z",
+     "start_time": "2025-09-12T17:20:56.858433Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "for i in df.columns:\n",
+    "    print(i)"
+   ],
+   "id": "89dd8b0c5685cac9",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0\n",
+      "datetime\n",
+      "BP [R]_C1\n",
+      "HP [R]_C1\n",
+      "O2 [R]_C1\n",
+      "CO2 [R]_C1\n",
+      "O2_MMOL [R]_C1\n",
+      "POIDS_1 [R]_C1\n",
+      "POIDS_2 [R]_C1\n",
+      "POIDS_3 [R]_C1\n",
+      "CO2_MMOL [R]_C1\n",
+      "DEFAUT_BP [B]_C1\n",
+      "DEFAUT_HP [B]_C1\n",
+      "A_SECONDES [I]_C1\n",
+      "IRRADIANCE [I]_C1\n",
+      "REARMEMENT [B]_C1\n",
+      "ARU_CELLULE [B]_C1\n",
+      "CONSIGNE_O2 [I]_C1\n",
+      "Etat_Mesure [B]_C1\n",
+      "POIDS_TOTAL [R]_C1\n",
+      "BALLON_CHAUD [R]_C1\n",
+      "BALLON_FROID [R]_C1\n",
+      "CONSIGNE_CO2 [I]_C1\n",
+      "MA_VARIATEUR [B]_C1\n",
+      "COMPRESSEUR_1 [B]_C1\n",
+      "COMPRESSEUR_2 [B]_C1\n",
+      "POMPE_INF_ECO [B]_C1\n",
+      "POMPE_SUP_ECO [B]_C1\n",
+      "PPM_O2_HUMIDE [R]_C1\n",
+      "V2V_AIR_VICIE [B]_C1\n",
+      "V2V_EAU_PLUIE [I]_C1\n",
+      "HAUTEUR_ECOLUX [I]_C1\n",
+      "HUMIDIFICATEUR [I]_C1\n",
+      "POMPE_FOND_ECO [B]_C1\n",
+      "PPM_CO2_HUMIDE [I]_C1\n",
+      "V2V_DESHUMIDIF [B]_C1\n",
+      "VANNE_PROP_INF [I]_C1\n",
+      "VANNE_PROP_SUP [I]_C1\n",
+      "FERMETURE_PORTE [B]_C1\n",
+      "MOLE_O2_DERIVEE [R]_C1\n",
+      "POMPE_UTA_CHAUD [B]_C1\n",
+      "POMPE_UTA_FROID [B]_C1\n",
+      "V2V_CAPTAGE_CO2 [B]_C1\n",
+      "VANNE_PROP_FOND [I]_C1\n",
+      "VANNE_UTA_CHAUD [I]_C1\n",
+      "VANNE_UTA_FROID [I]_C1\n",
+      "VENTILATEUR_CTA [B]_C1\n",
+      "MOLE_CO2_DERIVEE [R]_C1\n",
+      "ORIGINE_COLONNES [B]_C1\n",
+      "V2V_INJECTION_N2 [B]_C1\n",
+      "V2V_INJECTION_O2 [B]_C1\n",
+      "V2V_INJ_AIR_NEUF [B]_C1\n",
+      "VIDANGE_CANIVEAU [B]_C1\n",
+      "CONSIGNE_ROTATION [I]_C1\n",
+      "CONSIGNE_TEMP_INF [R]_C1\n",
+      "CONSIGNE_TEMP_SUP [R]_C1\n",
+      "DESHUMIDIFICATEUR [B]_C1\n",
+      "POIDS_EAU_CELLULE [R]_C1\n",
+      "POMPE_GENER_CHAUD [B]_C1\n",
+      "POMPE_GENER_FROID [B]_C1\n",
+      "TEMPERATURE_SONDE [R]_C1\n",
+      "V2V_ABSORBTION_O2 [B]_C1\n",
+      "V2V_CHAUD_INF_ECO [B]_C1\n",
+      "V2V_CHAUD_SUP_ECO [B]_C1\n",
+      "V2V_FROID_INF_ECO [B]_C1\n",
+      "V2V_FROID_SUP_ECO [B]_C1\n",
+      "V2V_INJECTION_CO2 [B]_C1\n",
+      "CONSIGNE_ECLAIRAGE [I]_C1\n",
+      "CONSIGNE_TEMP_FOND [R]_C1\n",
+      "POIDS_EAU_CONSIGNE [R]_C1\n",
+      "PRESSION_EXTERIEUR [R]_C1\n",
+      "PRESSION_O2_HUMIDE [R]_C1\n",
+      "V2V_ABSORBTION_CO2 [B]_C1\n",
+      "V2V_ABSORBTION_CO3 [B]_C1\n",
+      "V2V_CHAUD_FOND_ECO [B]_C1\n",
+      "V2V_FROID_FOND_ECO [B]_C1\n",
+      "HYGROMETRIE_CELLULE [R]_C1\n",
+      "PRESSION_CO2_HUMIDE [R]_C1\n",
+      "SURPRESSION_CEL_EXT [R]_C1\n",
+      "TEMPERATURE_MOY_INF [R]_C1\n",
+      "TEMPERATURE_MOY_SUP [R]_C1\n",
+      "TEMPERATURE_REPRISE [R]_C1\n",
+      "V2V_CIRCULATION_AIR [B]_C1\n",
+      "V2V_CONDENS_UTA_EXT [B]_C1\n",
+      "V2V_CONDENS_UTA_INT [B]_C1\n",
+      "CONSIGNE_VENTILATION [I]_C1\n",
+      "HYGROMETRIE_CONSIGNE [I]_C1\n",
+      "TEMPERATURE_CONSIGNE [R]_C1\n",
+      "TEMPERATURE_MOY_FOND [R]_C1\n",
+      "V2V_LESSIVAT_ECORIUM [B]_C1\n",
+      "V2V_VIDANGE_CANIVEAU [B]_C1\n",
+      "VIDANGE_EAU_DE_PLUIE [B]_C1\n",
+      "HYGROMETRIE_SOUFFLAGE [R]_C1\n",
+      "TEMPERATURE_SOUFFLAGE [R]_C1\n",
+      "V2V_CONDENSAT_UTA_EXT [B]_C1\n",
+      "V2V_CONDENSAT_UTA_INT [B]_C1\n",
+      "VENTILATEUR_TEMPETE_1 [B]_C1\n",
+      "VENTILATEUR_TEMPETE_2 [B]_C1\n",
+      "VENTILATEUR_TEMPETE_3 [B]_C1\n",
+      "VENTILATEUR_TEMPETE_4 [B]_C1\n",
+      "TEMPERATURE_ALLER_CHAUD [R]_C1\n",
+      "TEMPERATURE_ALLER_FROID [R]_C1\n",
+      "TEMP_ENTREE_INF_ECORIUM [R]_C1\n",
+      "TEMP_ENTREE_SUP_ECORIUM [R]_C1\n",
+      "TEMP_SORTIE_INF_ECORIUM [R]_C1\n",
+      "TEMP_SORTIE_SUP_ECORIUM [R]_C1\n",
+      "TEMPERATURE_RETOUR_CHAUD [R]_C1\n",
+      "TEMPERATURE_RETOUR_FROID [R]_C1\n",
+      "TEMP_ENTREE_FOND_ECORIUM [R]_C1\n",
+      "TEMP_SORTIE_FOND_ECORIUM [R]_C1\n",
+      "BP [R]_C2\n",
+      "HP [R]_C2\n",
+      "O2 [R]_C2\n",
+      "CO2 [R]_C2\n",
+      "O2_MMOL [R]_C2\n",
+      "POIDS_1 [R]_C2\n",
+      "POIDS_2 [R]_C2\n",
+      "POIDS_3 [R]_C2\n",
+      "CO2_MMOL [R]_C2\n",
+      "DEFAUT_BP [B]_C2\n",
+      "DEFAUT_HP [B]_C2\n",
+      "A_SECONDES [I]_C2\n",
+      "IRRADIANCE [I]_C2\n",
+      "REARMEMENT [B]_C2\n",
+      "ARU_CELLULE [B]_C2\n",
+      "CONSIGNE_O2 [I]_C2\n",
+      "Etat_Mesure [B]_C2\n",
+      "POIDS_TOTAL [I]_C2\n",
+      "BALLON_CHAUD [R]_C2\n",
+      "BALLON_FROID [R]_C2\n",
+      "CONSIGNE_CO2 [I]_C2\n",
+      "MA_VARIATEUR [B]_C2\n",
+      "COMPRESSEUR_1 [B]_C2\n",
+      "COMPRESSEUR_2 [B]_C2\n",
+      "POMPE_INF_ECO [B]_C2\n",
+      "POMPE_SUP_ECO [B]_C2\n",
+      "PPM_O2_HUMIDE [R]_C2\n",
+      "V2V_AIR_VICIE [B]_C2\n",
+      "V2V_EAU_PLUIE [I]_C2\n",
+      "HAUTEUR_ECOLUX [I]_C2\n",
+      "HUMIDIFICATEUR [I]_C2\n",
+      "POMPE_FOND_ECO [B]_C2\n",
+      "PPM_CO2_HUMIDE [I]_C2\n",
+      "V2V_DESHUMIDIF [B]_C2\n",
+      "VANNE_PROP_INF [I]_C2\n",
+      "VANNE_PROP_SUP [I]_C2\n",
+      "FERMETURE_PORTE [B]_C2\n",
+      "MOLE_O2_DERIVEE [R]_C2\n",
+      "POMPE_UTA_CHAUD [B]_C2\n",
+      "POMPE_UTA_FROID [B]_C2\n",
+      "V2V_CAPTAGE_CO2 [B]_C2\n",
+      "VANNE_PROP_FOND [I]_C2\n",
+      "VANNE_UTA_CHAUD [I]_C2\n",
+      "VANNE_UTA_FROID [I]_C2\n",
+      "VENTILATEUR_CTA [B]_C2\n",
+      "MOLE_CO2_DERIVEE [R]_C2\n",
+      "ORIGINE_COLONNES [B]_C2\n",
+      "V2V_INJECTION_N2 [B]_C2\n",
+      "V2V_INJECTION_O2 [B]_C2\n",
+      "V2V_INJ_AIR_NEUF [B]_C2\n",
+      "VIDANGE_CANIVEAU [B]_C2\n",
+      "CONSIGNE_ROTATION [I]_C2\n",
+      "CONSIGNE_TEMP_INF [R]_C2\n",
+      "CONSIGNE_TEMP_SUP [R]_C2\n",
+      "DESHUMIDIFICATEUR [B]_C2\n",
+      "POIDS_EAU_CELLULE [R]_C2\n",
+      "POMPE_GENER_CHAUD [B]_C2\n",
+      "POMPE_GENER_FROID [B]_C2\n",
+      "TEMPERATURE_SONDE [R]_C2\n",
+      "V2V_ABSORBTION_O2 [B]_C2\n",
+      "V2V_CHAUD_INF_ECO [B]_C2\n",
+      "V2V_CHAUD_SUP_ECO [B]_C2\n",
+      "V2V_FROID_INF_ECO [B]_C2\n",
+      "V2V_FROID_SUP_ECO [B]_C2\n",
+      "V2V_INJECTION_CO2 [B]_C2\n",
+      "CONSIGNE_ECLAIRAGE [I]_C2\n",
+      "CONSIGNE_TEMP_FOND [R]_C2\n",
+      "POIDS_EAU_CONSIGNE [R]_C2\n",
+      "PRESSION_EXTERIEUR [R]_C2\n",
+      "PRESSION_O2_HUMIDE [R]_C2\n",
+      "V2V_ABSORBTION_CO2 [B]_C2\n",
+      "V2V_CHAUD_FOND_ECO [B]_C2\n",
+      "V2V_FROID_FOND_ECO [B]_C2\n",
+      "HYGROMETRIE_CELLULE [R]_C2\n",
+      "PRESSION_CO2_HUMIDE [R]_C2\n",
+      "SURPRESSION_CEL_EXT [R]_C2\n",
+      "TEMPERATURE_MOY_INF [R]_C2\n",
+      "TEMPERATURE_MOY_SUP [R]_C2\n",
+      "TEMPERATURE_REPRISE [R]_C2\n",
+      "V2V_CIRCULATION_AIR [B]_C2\n",
+      "V2V_CONDENS_UTA_EXT [B]_C2\n",
+      "V2V_CONDENS_UTA_INT [B]_C2\n",
+      "CONSIGNE_VENTILATION [I]_C2\n",
+      "HYGROMETRIE_CONSIGNE [I]_C2\n",
+      "TEMPERATURE_CONSIGNE [R]_C2\n",
+      "TEMPERATURE_MOY_FOND [R]_C2\n",
+      "V2V_LESSIVAT_ECORIUM [B]_C2\n",
+      "V2V_VIDANGE_CANIVEAU [B]_C2\n",
+      "VIDANGE_EAU_DE_PLUIE [B]_C2\n",
+      "HYGROMETRIE_SOUFFLAGE [R]_C2\n",
+      "TEMPERATURE_SOUFFLAGE [R]_C2\n",
+      "V2V_CONDENSAT_UTA_EXT [B]_C2\n",
+      "V2V_CONDENSAT_UTA_INT [B]_C2\n",
+      "VENTILATEUR_TEMPETE_1 [B]_C2\n",
+      "VENTILATEUR_TEMPETE_2 [B]_C2\n",
+      "VENTILATEUR_TEMPETE_3 [B]_C2\n",
+      "VENTILATEUR_TEMPETE_4 [B]_C2\n",
+      "TEMPERATURE_ALLER_CHAUD [R]_C2\n",
+      "TEMPERATURE_ALLER_FROID [R]_C2\n",
+      "TEMP_ENTREE_INF_ECORIUM [R]_C2\n",
+      "TEMP_ENTREE_SUP_ECORIUM [R]_C2\n",
+      "TEMP_SORTIE_INF_ECORIUM [R]_C2\n",
+      "TEMP_SORTIE_SUP_ECORIUM [R]_C2\n",
+      "TEMPERATURE_RETOUR_CHAUD [R]_C2\n",
+      "TEMPERATURE_RETOUR_FROID [R]_C2\n",
+      "TEMP_ENTREE_FOND_ECORIUM [R]_C2\n",
+      "TEMP_SORTIE_FOND_ECORIUM [R]_C2\n",
+      "BP [R]_C3\n",
+      "HP [R]_C3\n",
+      "O2 [R]_C3\n",
+      "CO2 [R]_C3\n",
+      "O2_MMOL [R]_C3\n",
+      "POIDS_1 [R]_C3\n",
+      "POIDS_2 [R]_C3\n",
+      "POIDS_3 [R]_C3\n",
+      "CO2_MMOL [R]_C3\n",
+      "DEFAUT_BP [B]_C3\n",
+      "DEFAUT_HP [B]_C3\n",
+      "A_SECONDES [I]_C3\n",
+      "IRRADIANCE [I]_C3\n",
+      "REARMEMENT [B]_C3\n",
+      "ARU_CELLULE [B]_C3\n",
+      "CONSIGNE_O2 [I]_C3\n",
+      "Etat_Mesure [B]_C3\n",
+      "POIDS_TOTAL [R]_C3\n",
+      "BALLON_CHAUD [R]_C3\n",
+      "BALLON_FROID [R]_C3\n",
+      "CONSIGNE_CO2 [I]_C3\n",
+      "MA_VARIATEUR [B]_C3\n",
+      "COMPRESSEUR_1 [B]_C3\n",
+      "COMPRESSEUR_2 [B]_C3\n",
+      "POMPE_INF_ECO [B]_C3\n",
+      "POMPE_SUP_ECO [B]_C3\n",
+      "PPM_O2_HUMIDE [R]_C3\n",
+      "V2V_AIR_VICIE [B]_C3\n",
+      "V2V_EAU_PLUIE [I]_C3\n",
+      "HAUTEUR_ECOLUX [I]_C3\n",
+      "HUMIDIFICATEUR [I]_C3\n",
+      "POMPE_FOND_ECO [B]_C3\n",
+      "PPM_CO2_HUMIDE [I]_C3\n",
+      "V2V_DESHUMIDIF [B]_C3\n",
+      "VANNE_PROP_INF [I]_C3\n",
+      "VANNE_PROP_SUP [I]_C3\n",
+      "FERMETURE_PORTE [B]_C3\n",
+      "MOLE_O2_DERIVEE [R]_C3\n",
+      "POMPE_UTA_CHAUD [B]_C3\n",
+      "POMPE_UTA_FROID [B]_C3\n",
+      "V2V_CAPTAGE_CO2 [B]_C3\n",
+      "VANNE_PROP_FOND [I]_C3\n",
+      "VANNE_UTA_CHAUD [I]_C3\n",
+      "VANNE_UTA_FROID [I]_C3\n",
+      "VENTILATEUR_CTA [B]_C3\n",
+      "MOLE_CO2_DERIVEE [R]_C3\n",
+      "ORIGINE_COLONNES [B]_C3\n",
+      "V2V_INJECTION_N2 [B]_C3\n",
+      "V2V_INJECTION_O2 [B]_C3\n",
+      "V2V_INJ_AIR_NEUF [B]_C3\n",
+      "VIDANGE_CANIVEAU [B]_C3\n",
+      "CONSIGNE_ROTATION [I]_C3\n",
+      "CONSIGNE_TEMP_INF [R]_C3\n",
+      "CONSIGNE_TEMP_SUP [R]_C3\n",
+      "DESHUMIDIFICATEUR [B]_C3\n",
+      "POIDS_EAU_CELLULE [R]_C3\n",
+      "POMPE_GENER_CHAUD [B]_C3\n",
+      "POMPE_GENER_FROID [B]_C3\n",
+      "TEMPERATURE_SONDE [R]_C3\n",
+      "V2V_ABSORBTION_O2 [B]_C3\n",
+      "V2V_CHAUD_INF_ECO [B]_C3\n",
+      "V2V_CHAUD_SUP_ECO [B]_C3\n",
+      "V2V_FROID_INF_ECO [B]_C3\n",
+      "V2V_FROID_SUP_ECO [B]_C3\n",
+      "V2V_INJECTION_CO2 [B]_C3\n",
+      "CONSIGNE_ECLAIRAGE [I]_C3\n",
+      "CONSIGNE_TEMP_FOND [R]_C3\n",
+      "POIDS_EAU_CONSIGNE [R]_C3\n",
+      "PRESSION_EXTERIEUR [R]_C3\n",
+      "PRESSION_O2_HUMIDE [R]_C3\n",
+      "V2V_ABSORBTION_CO2 [B]_C3\n",
+      "V2V_CHAUD_FOND_ECO [B]_C3\n",
+      "HYGROMETRIE_CELLULE [R]_C3\n",
+      "PRESSION_CO2_HUMIDE [R]_C3\n",
+      "SURPRESSION_CEL_EXT [R]_C3\n",
+      "TEMPERATURE_MOY_INF [R]_C3\n",
+      "TEMPERATURE_MOY_SUP [R]_C3\n",
+      "TEMPERATURE_REPRISE [R]_C3\n",
+      "V2V_CIRCULATION_AIR [B]_C3\n",
+      "V2V_CONDENS_UTA_EXT [B]_C3\n",
+      "V2V_CONDENS_UTA_INT [B]_C3\n",
+      "CONSIGNE_VENTILATION [I]_C3\n",
+      "HYGROMETRIE_CONSIGNE [I]_C3\n",
+      "TEMPERATURE_CONSIGNE [R]_C3\n",
+      "TEMPERATURE_MOY_FOND [R]_C3\n",
+      "V2V_LESSIVAT_ECORIUM [B]_C3\n",
+      "V2V_VIDANGE_CANIVEAU [B]_C3\n",
+      "VIDANGE_EAU_DE_PLUIE [B]_C3\n",
+      "HYGROMETRIE_SOUFFLAGE [R]_C3\n",
+      "TEMPERATURE_SOUFFLAGE [R]_C3\n",
+      "V2V_CONDENSAT_UTA_EXT [B]_C3\n",
+      "V2V_CONDENSAT_UTA_INT [B]_C3\n",
+      "VENTILATEUR_TEMPETE_1 [B]_C3\n",
+      "VENTILATEUR_TEMPETE_2 [B]_C3\n",
+      "VENTILATEUR_TEMPETE_3 [B]_C3\n",
+      "VENTILATEUR_TEMPETE_4 [B]_C3\n",
+      "TEMPERATURE_ALLER_CHAUD [R]_C3\n",
+      "TEMPERATURE_ALLER_FROID [R]_C3\n",
+      "TEMP_ENTREE_INF_ECORIUM [R]_C3\n",
+      "TEMP_ENTREE_SUP_ECORIUM [R]_C3\n",
+      "TEMP_SORTIE_INF_ECORIUM [R]_C3\n",
+      "TEMP_SORTIE_SUP_ECORIUM [R]_C3\n",
+      "TEMPERATURE_RETOUR_CHAUD [R]_C3\n",
+      "TEMPERATURE_RETOUR_FROID [R]_C3\n",
+      "TEMP_ENTREE_FOND_ECORIUM [R]_C3\n",
+      "TEMP_SORTIE_FOND_ECORIUM [R]_C3\n",
+      "TEMPERATURE_MEG_FROID [R]_C4\n",
+      "TEMPERATURE_MEG_CHAUD [R]_C4\n",
+      "BP_R134_EN_BARS [R]_C4\n",
+      "BP_R134_EN_DEGRES [R]_C4\n",
+      "CONSIGNE_BALLON_FROID [R]_C4\n",
+      "CONSIGNE_BALLON_CHAUD [R]_C4\n",
+      "HP_R134_EN_BARS [R]_C4\n",
+      "HP_R134_EN_DEGRES [R]_C4\n",
+      "CDE_CONDENSEUR [B]_C4\n",
+      "CDE_EVAPORATEUR [B]_C4\n",
+      "LOCAL_DISTANT [B]_C4\n",
+      "MA_THERMO [B]_C4\n",
+      "CDE_DEGIVRAGE [B]_C4\n",
+      "CDE_EVAPO_FROID [B]_C4\n",
+      "CDE_EVAPO_CHAUD [B]_C4\n",
+      "DEBIT_BP [B]_C4\n",
+      "DEBIT_HP [B]_C4\n",
+      "DEFAUT_COMPRESSEUR_HP [B]_C4\n",
+      "DEFAUT_COMPRESSEUR_BP [B]_C4\n",
+      "DEFAUT_COMPRESSEUR_1 [B]_C4\n",
+      "DEFAUT_COMPRESSEUR_2 [B]_C4\n",
+      "SECURITE_GENERALE [B]_C4\n",
+      "THERMOSTAT [B]_C4\n",
+      "SECURITE_HP [B]_C4\n",
+      "COMPRESSEUR_1 [B]_C4\n",
+      "COMPRESSEUR_2 [B]_C4\n",
+      "CDE_EVAPO_BP_FROID [B]_C4\n",
+      "CDE_VENTILATEUR_EVAPO [B]_C4\n",
+      "POMPE_MEG_FROID [B]_C4\n",
+      "POMPE_MEG_CHAUD [B]_C4\n",
+      "RETOUR_LOCAL_DISTANT [B]_C4\n",
+      "SECU_BALLON_CHAUD [B]_C4\n",
+      "SECU_BALLON_FROID [B]_C4\n",
+      "CDE_COMPRESSEUR1 [B]_C4\n",
+      "CDE_COMPRESSEUR2 [B]_C4\n",
+      "ecart_temp_C1\n",
+      "alerte_temp_C1\n",
+      "ecart_temp_C2\n",
+      "alerte_temp_C2\n",
+      "ecart_temp_C3\n",
+      "alerte_temp_C3\n",
+      "cluster_All\n",
+      "ecart_temp_C4_C\n",
+      "ecart_temp_C4_F\n",
+      "seconds_in_day\n",
+      "day_sin\n",
+      "day_cos\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T18:58:00.308470Z",
+     "start_time": "2025-09-12T18:58:00.305018Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Active la gestion mémoire GPU \"à la demande\"\n",
+    "gpus = tf.config.list_physical_devices('GPU')\n",
+    "for g in gpus:\n",
+    "    tf.config.experimental.set_memory_growth(g, True)\n",
+    "\n",
+    "print(\"GPUs détectés :\", gpus)\n"
+   ],
+   "id": "e13838652fc3fe57",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPUs détectés : []\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T18:58:02.029713Z",
+     "start_time": "2025-09-12T18:58:02.026586Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import tensorflow as tf\n",
+    "print(tf.config.list_physical_devices('GPU'))"
+   ],
+   "id": "4d270af231baad40",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2025-08-13T07:14:01.816934Z",
      "start_time": "2025-08-13T07:14:01.700711Z"
     }
